--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <article class="blog-post">
                 <h2></h2>
                 <p class="date">Posted on January 14, 2025</p>
-                <p>In today's digital age, making money online has never been more accessible. Whether you're looking to supplement your income or start a full-time online career, there are various opportunities available to suit your skills and interests. Below, we explore some of the best jobs you can do online, along with trusted websites that offer these opportunities.
-1. Freelance Writing
+                <p>In today's digital age, making money online has never been more accessible. Whether you're looking to supplement your income or start a full-time online career, there are various opportunities available to suit your skills and interests. Below, we explore some of the best jobs you can do online, along with trusted websites that offer these opportunities.</p>
+<p>1. Freelance Writing</p>
 
-Freelance writing is one of the most popular online jobs. If you have a way with words, you can write content for blogs, websites, businesses, and more.
+<p>Freelance writing is one of the most popular online jobs. If you have a way with words, you can write content for blogs, websites, businesses, and more.</p>
 
 
 Best Websites:
@@ -79,7 +79,7 @@ We Work Remotely: A remote job board with social media management job listings.
 Indeed: A popular job search platform with social media manager listings.
 Upwork: Find social media management gigs from businesses all around the world.
 8. Transcription & Translation
-If you’re a fast typist or bilingual, transcription and translation services can offer flexible online work. Transcriptionists convert audio or video recordings into written text, while translators convert documents from one language to another.
+If youâ€™re a fast typist or bilingual, transcription and translation services can offer flexible online work. Transcriptionists convert audio or video recordings into written text, while translators convert documents from one language to another.
 
 Best Websites:
 
@@ -99,7 +99,7 @@ Best Websites:
 
 Amazon Mechanical Turk: A platform for completing microtasks in exchange for small payments.
 Clickworker: Offers various types of tasks, including text creation, categorization, proofreading, and more.
-Lionbridge: A company offering various online jobs such as data entry, search evaluation, and translation.Earning online has become a practical and flexible way for individuals to generate income. Whether you’re looking for full-time work or a side hustle, the opportunities are plentiful. The key is to find something that aligns with your skills and interests, and to invest the time and effort to build a strong online reputation.</p>
+Lionbridge: A company offering various online jobs such as data entry, search evaluation, and translation.Earning online has become a practical and flexible way for individuals to generate income. Whether youâ€™re looking for full-time work or a side hustle, the opportunities are plentiful. The key is to find something that aligns with your skills and interests, and to invest the time and effort to build a strong online reputation.</p>
             </article>
 
             <!-- You can add more blog posts here by copying the article tag -->
