--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
 <p>Freelance writing is one of the most popular online jobs. If you have a way with words, you can write content for blogs, websites, businesses, and more.</p>
 
 
-Best Websites:
+<p>Best Websites:</p>
 
 
-Upwork: A global freelancing platform that connects businesses with skilled freelancers.
+<p>Upwork: A global freelancing platform that connects businesses with skilled freelancers.</p>
 
-ProBlogger: A job board dedicated to finding professional blogging and writing gigs.
+<p>ProBlogger: A job board dedicated to finding professional blogging and writing gigs.</p>
 
-Fiverr: A marketplace where you can offer writing services starting at $5.
+<p>Fiverr: A marketplace where you can offer writing services starting at $5.</p>
 
 
-2. Virtual Assistant 
-Many small business owners and entrepreneurs need help with administrative tasks. As a virtual assistant (VA), you could manage emails, schedule appointments, handle social media, and more.
+<p></p>2. Virtual Assistant </p>
+<p>Many small business owners and entrepreneurs need help with administrative tasks. As a virtual assistant (VA), you could manage emails, schedule appointments, handle social media, and more.</p>
 
 Best Websites:
 
